--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
   background-color: black;
-  color: beige;
+  color: rgb(245, 245, 220);
 }
 
 a {
