--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ html {
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
-  background-color: black;
+  background-color: #1E1C1C;
   color: rgb(245, 245, 220);
 }
 
